--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ section:nth-of-type(odd) { /* Alternate background colors (optional) */
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+    background-color: rgba(0, 0, 0, 0.8); /* Black w/ opacity */
     padding-top: 60px; /* Location of the box */
 }
 
@@ -420,7 +420,7 @@ section:nth-of-type(odd) { /* Alternate background colors (optional) */
     bottom: 20px; /* Adjust as needed */
     left: 20px; /* Adjust as needed */
     right: 20px; /* Adjust as needed */
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background for text */
+    background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent background for text */
     color: white;
     padding: 15px;
     text-align: center;
@@ -496,7 +496,7 @@ footer {
 /* Medium screens (Tablets and larger) */
 @media (min-width: 768px) {
     :root {
-        --base-font-size: 15px; /* Slightly larger font on desktop */
+        --base-font-size: 11px; /* Slightly larger font on desktop */
     }
     
     .container {
@@ -561,11 +561,11 @@ footer {
 }
 
 /* Extra Large screens (Large Desktops) */
-@media (min-width: 3000px) {
+@media (min-width: 2560px) {
     /* Potential adjustments for very wide screens if needed */
     /* e.g., increase --container-max-width if desired */
     :root {
-        --base-font-size: 20px; /* Slightly larger font on desktop */
+        --base-font-size: 18px; /* Slightly larger font on desktop */
         --container-max-width: 1600px;
     }    
 }
