--- a/style.css
+++ b/style.css
@@ -909,6 +909,10 @@ footer {
         align-items: center;
         text-align: center;
     }
+
+    .modal-text-display {
+        display: none; /* Hide modal text on smaller screens */
+    }
 }
 
 /* Medium screens (Tablets and larger) */
